hphp/test/quick/closure_use_this.php.expectf

Fatal error: Cannot use $this as lexical variable in %s/closure_use_this.php on line 3
